# Axity_Python_CJBN

Fundamental_level/Entorno_y_herramientas/Laboratorios/json_processor/: pyproject.toml
Fundamental_level/Entorno_y_herramientas/Laboratorios/json_processor/data/: data.json
Fundamental_level/Entorno_y_herramientas/Laboratorios/json_processor/json_processor/: main.py
Fundamental_level/Entorno_y_herramientas/Laboratorios/json_processor/tests/: test_main.py
Fundamental_level/Entorno_y_herramientas/Laboratorios/laboratorio_pep8/: pyproject.toml
Fundamental_level/Entorno_y_herramientas/laboratorio_nuevo/: pyproject.toml
Fundamental_level/Funciones_y_programacion_pythonic/laboratorio_pythonic/: pyproject.toml
Fundamental_level/Funciones_y_programacion_pythonic/laboratorio_pythonic/src/laboratorio_pythonic/: context_managers.py  decorators.py  generators.py  main.py
Fundamental_level/Fundamentos_del_lenguaje/json_processor/json_processor/: main.py
Fundamental_level/Fundamentos_del_lenguaje/json_processor/tests/: test_main.py
Fundamental_level/Objetos_y_modelos_de_datos/laboratorio_orders/: pyproject.toml
Fundamental_level/Objetos_y_modelos_de_datos/laboratorio_orders/src/laboratorio_orders/: entities.py  main.py  mappers.py  models.py
Fundamental_level/Tipado_estatico_opcional_y_calidad/: .pre-commit-config.yaml  mypy.ini
Fundamental_level/Tipado_estatico_opcional_y_calidad/order_quality_lab/: pyproject.toml
Fundamental_level/Tipado_estatico_opcional_y_calidad/order_quality_lab/src/order_quality_lab/: entities.py  main.py  mappers.py  models.py
