[project]
name = "laboratorio-orders"
version = "0.1.0"
description = ""
authors = [
    {name = "vn0nv6j"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "laboratorio_orders", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
