[project]
name = "order-quality-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "vn0nv6j"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "order_quality_lab", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]