[project]
name = "laboratorio-pep8"
version = "0.1.0"
description = ""
authors = [
    {name = "vn0nv6j"}
]
readme = "README.md"
requires-python = "/opt/homebrew/bin/python3"
dependencies = [
]

[tool.poetry]
packages = [{include = "laboratorio_pep8", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
